--- a/daily/build.gradle
+++ b/daily/build.gradle
@@ -3,21 +3,19 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-
+    buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.zeefive.vmcapp"
+        applicationId "com.vmc.vmcdaily"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 5
+        versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
     }
-
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -25,6 +23,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation project(path: ':common')
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
